feat: allow overriding of terminal type detection
Also added a new example that prints keys as they are pressed in raw mode.